@@ -53,10 +53,10 @@ in $prefix/lib and its header files are installed in $prefix/include and so
 on. The prefix is set with "configure --prefix".
 .IP "--protocols"
 Lists what particular protocols the installed libcurl was built to support. At
-the time of writing, this list may include HTTP, HTTPS, FTP, FTPS, GOPHER,
-FILE, TELNET, LDAP, DICT. Do not assume any particular order. The protocols
-will be listed using uppercase and are separated by newlines. There may be
-none, one or several protocols in the list. (Added in 7.13.0)
+the time of writing, this list may include HTTP, HTTPS, FTP, FTPS, FILE,
+TELNET, LDAP, DICT. Do not assume any particular order. The protocols will
+be listed using uppercase and are separated by newlines. There may be none,
+one or several protocols in the list. (Added in 7.13.0)
 .IP "--version"
 Outputs version information about the installed libcurl.
 .IP "--vernum"
