@@ -30,8 +30,8 @@ curl \- transfer a URL
 .SH DESCRIPTION
 .B curl
 is a tool to transfer data from or to a server, using one of the supported
-protocols (HTTP, HTTPS, FTP, FTPS, TFTP, GOPHER, DICT, TELNET, LDAP or
-FILE). The command is designed to work without user interaction.
+protocols (HTTP, HTTPS, FTP, FTPS, TFTP, DICT, TELNET, LDAP or FILE).
+The command is designed to work without user interaction.
 
 curl offers a busload of useful tricks like proxy support, user
 authentication, ftp upload, HTTP post, SSL (https:) connections, cookies, file
@@ -1198,8 +1198,6 @@ Sets proxy server to use for HTTP.
 Sets proxy server to use for HTTPS.
 .IP "FTP_PROXY [protocol://]<host>[:port]"
 Sets proxy server to use for FTP.
-.IP "GOPHER_PROXY [protocol://]<host>[:port]"
-Sets proxy server to use for GOPHER.
 .IP "ALL_PROXY [protocol://]<host>[:port]"
 Sets proxy server to use if no protocol-specific proxy is set.
 .IP "NO_PROXY <comma-separated list of hosts>"
