@@ -85,4 +85,4 @@ TEST CASE NUMBERS
 
 TODO:
 
-  * Add tests for TELNET, GOPHER, LDAP, DICT...
+  * Add tests for TELNET, LDAP, DICT...
